--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <ul>
-    <li><a href="../profile/index.html">Home</a></li>
-    <li><a href="https://www.lewagon.com/fr">Formation</a></li>
-    <li><a href="../profile/contact.html">Contact</a></li>
-    <li><a href="http://www.linkedin.com/in/tom-levy">About</a></li>
-  </ul>
+  <li><a href="../profile/index.html">Home</a></li>
+  <li><a href="https://www.lewagon.com/fr">Formation</a></li>
+  <li><a href="../profile/contact.html">Contact</a></li>
+  <li><a href="http://www.linkedin.com/in/tom-levy">About</a></li>
+</ul>
   <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" class="fb"> <meta charset="UTF-8">
   <title>My profil</title>
@@ -16,19 +16,19 @@
 <body>
   <div class="container">
       <div class="card-white" id= "introduction">
-          <h1> Welcome to the Tom Profileeeeeeeeee</h1>
-          <img src= "./images/profilpicture.jpg" width="150px" class= "img-circle" alt="Tom Levy">
-          <p> I like innovation, tech, code</p>
-      </div>
+<h1> Welcome to the Tom Profil</h1>
+<img src= "./images/profilpicture.jpg" width="150px" class= "img-circle" alt="Tom Levy">
+<p> I like innovation, tech, code</p>
+  </div>
       <div class="card-white">
-          <h2>Follow me</h2>
-          <ul class= "list-inline">
-             <li>
-              <a href="https://www.facebook.com/" alt="mon profil fb" target="_blank">
-                <i class="fab fa-facebook"></i>
-               </a>
-             </li>
-         </ul>
+<h2>Follow me</h2>
+<ul class= "list-inline">
+  <li>
+        <a href="facebook.com/tom.levy.121" target="_blank">
+          <i class="fab fa-facebook"></i>
+        </a>
+      </li>
+    </ul>
    </div>
   </div>
 </body>
