make my profile prettier

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <h2>Follow me</h2>
 <ul class= "list-inline">
   <li>
-        <a href="facebook.com/tom.levy.121" target="_blank">
+        <a href="http://www.facebook.com/tom.levy.121" target="_blank">
           <i class="fab fa-facebook"></i>
         </a>
       </li>
